# content-flow

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  PROGRESS.md  README.md  TASK_BILLING.md  TASK_DASHBOARD.md  TASK_DESIGN.md  TASK_E2E.md  TASK_EMAIL.md  TASK_GDPR.md  TASK_I18N.md  TASK_LOAD_ADMIN.md  TASK_MARKETING.md  TASK_SECURITY.md  TASK_SHOPSYNC.md  TASK_VERIFICATION.md  TASK_VERTICAL_LAUNCHER.md  TASK_WHITELABEL.md  TASK_YTBOOST.md  alembic.ini  docker-compose.yml  pyproject.toml  test_fetch.py  todo.md
app/: __init__.py  config.py  main.py
dashboard/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
design/: ASSETS.md  BRAND.md  DESIGN_SYSTEM.md  tokens.css
docs/: BACKLOG.md  BACKUP_RECOVERY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_VERTICAL.md  GOOGLE_SHEETS_SETUP.md  INTEGRATION_REPORT.md  INTEGRATION_STATUS.md  LOAD_TESTING.md  MIGRATIONS.md  PENTEST_SCENARIOS.md  PERFORMANCE.md  SDK_USAGE.md  SECURITY.md  SECURITY_AUDIT.md  SENTRY_SETUP.md  SMOKE_TEST.md  SOC2_READINESS.md  TESTING.md  VERIFICATION.md  VERTICAL_GUIDE.md  WEBHOOK_GUARANTEES.md
docs-site/: README.md  authentication.mdx  changelog.mdx  docs.json  introduction.mdx  openapi.json  package-lock.json  package.json  quickstart.mdx
e2e/: package-lock.json  package.json  playwright.config.ts  results.json  tsconfig.json
landing/: next.config.js  package-lock.json  package.json  proxy.ts
mcp/: __init__.py  server.py
migrations/: 009_add_user_language.sql  010_ytboost_tables.sql  env.py  script.py.mako
prometheus/: prometheus.yml
scripts/: _backup_common.py  backup_db.py  backup_files.py  check_env.py  check_translations.py  check_vertical_env.py  deploy_check.sh  export_openapi.py  migrate.sh  restore_db.py  run_load_test.sh  secret_scan.py  smoke_test.py  smoke_test_results.generated.md  smoke_test_results.md  test_card_news.py  test_card_news_sources.py  test_drive_connection.py  test_naver_blog_playwright.py  test_sheets_connection.py  test_youtube_to_blog.py  verify_adapters.py
sdk/python/: README.md  pyproject.toml
sdk/python/contentflow/: __init__.py  client.py  exceptions.py  types.py  webhooks.py
sdk/python/tests/: test_client.py  test_webhook_verify.py
tests/: _resource_cleanup.py  conftest.py  fakes.py  test_accounts.py  test_admin.py  (+85 more)
(+448 files in other folders)
